# Hookbot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
.claude/: launch.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
cli/: Cargo.toml
cli/src/: config.rs  devices.rs  main.rs  security.rs  status.rs  tunnels.rs
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  status.rs
docs/: api.md  architecture.md  firmware.md  hooks.md
firmware/: platformio.ini
hooks/: deskbot-config.json  deskbot-hook.js  install.sh
infra/: .gitignore  SETUP.md  cloudflare.tf  gce.tf  main.tf  outputs.tf  variables.tf
ios/: .gitignore  .swiftlint.yml  ExportOptions.plist  build-testflight.sh  project.yml  setup.sh
scripts/: extract-screenshots.py
server/: Cargo.toml  Dockerfile
server/certs/: origin-key.pem  origin.pem
server/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs
server/src/routes/: account.rs  automation.rs  boss_battle.rs  build.rs  community_store.rs  context.rs  desk_lights.rs  desk_occupancy.rs  developer_insights.rs  device_api.rs  device_links.rs  devices.rs  diagnostics.rs  discovery.rs  easter_eggs.rs  firmware.rs  gamification.rs  github.rs  groups.rs  homeassistant.rs  hooks.rs  mini_games.rs  mod.rs  monitors.rs  mood.rs  mood_learning.rs  music.rs  notifications.rs  ota.rs  pet.rs  project_routes.rs  sandbox.rs  sensors.rs  settings.rs  shared_assets.rs  social.rs  standing_desk.rs  store.rs  streamdeck.rs  tamagotchi.rs  (+3 more)
server/src/services/: command_queue.rs  device_poller.rs  mod.rs  proxy.rs  tunnel_manager.rs
tests/: state.spec.ts
web/: Dockerfile  nginx.conf  package-lock.json  package.json
(+211 files in other folders)
